--- a/Unit01_Crash Course on Python.ipynb
+++ b/Unit01_Crash Course on Python.ipynb
@@ -35,10 +35,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 9\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'int'>\n",
+      "您輸入的數值是奇數\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = input() #型態type = str\n",
+    "print(type(num))\n",
+    "num = int(num)\n",
+    "print(type(num))\n",
+    "\n",
+    "if num % 2 == 0:\n",
+    "    print('您輸入的數值是偶數')\n",
+    "else: print('您輸入的數值是奇數')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -56,32 +82,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "請輸入執行次數: 1\n",
+      "請輸入課程期數: 1\n",
+      "請輸入課程名稱: 2\n",
+      "請輸入姓名: 3\n",
+      "請輸入您的背景(科系或職業): 4\n",
+      "請簡述對於本課程得期望(列出幾點修完課程想得到的技能/對自己未來的規劃): 5\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "請問需要建造幾次模板故事：1\n",
-      "請輸入課程期數: 342\n",
-      "請輸入課程名稱: python機器學習\n",
-      "請輸入姓名: 江尚瑀\n",
-      "請輸入您的背景(科系或職業): 資工訓練班學生\n",
-      "請簡述對於本課程得期望(列出幾點修完課程想得到的技能/對自己未來的規劃): 機器學習\n",
-      "------------------------------------------\n",
-      "第342期 - python機器學習 \n",
-      "姓名： 江尚瑀 ,\n",
-      "學生背景： 資工訓練班學生\n",
-      "==========================================\n",
-      "江尚瑀 修習完課程[ python機器學習 ]後，\n",
-      "結業成果獲得: 機器學習 。\n",
-      "Well Done.\n",
-      "------------------------------------------\n"
+      "----------------------------------------\n",
+      "第1期 -2 \n",
+      "姓名: 3 ,\n",
+      "學生背景: 4\n",
+      "=============結訓證明=============\n",
+      "恭喜 3 修習完課程[ 2 ]後,\n",
+      "結業成果獲得: 5 .\n",
+      "well done.\n",
+      "----------------------------------------\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "n = int(input('請輸入執行次數:'))\n",
+    "for i in range(n): \n",
+    "    semester = input(\"請輸入課程期數:\")\n",
+    "    course = input(\"請輸入課程名稱:\")\n",
+    "    name = input(\"請輸入姓名:\")\n",
+    "    background = input(\"請輸入您的背景(科系或職業):\")\n",
+    "    expectation = input(\"請簡述對於本課程得期望(列出幾點修完課程想得到的技能/對自己未來的規劃):\")\n",
+    "    \n",
+    "    #Display the story based on the users input\n",
+    "    print (\"----------------------------------------\")\n",
+    "    print (\"第%s期 -%s \"%(semester, course))\n",
+    "    print (\"姓名:\", name,\",\")\n",
+    "    print (\"學生背景:\",background)\n",
+    "    print ('=============結訓證明=============')\n",
+    "    print ('恭喜',name,\"修習完課程[\",course,']後,')\n",
+    "    print (\"結業成果獲得:\",expectation,\".\")\n",
+    "    print (\"well done.\")\n",
+    "    print (\"----------------------------------------\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,10 +148,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請輸入 0 <?< 100 範圍的數字:"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 50\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "猜太大,你猜了1次\n",
+      "請輸入 0 <?< 50 範圍的數字:"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 30\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "猜太小,你猜了2次\n",
+      "請輸入 30 <?< 50 範圍的數字:"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 40\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "猜太小,你猜了3次\n",
+      "請輸入 40 <?< 50 範圍的數字:"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 45\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "猜太小,你猜了4次\n",
+      "請輸入 45 <?< 50 範圍的數字:"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 47\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "猜太小,你猜了5次\n",
+      "請輸入 47 <?< 50 範圍的數字:"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 48\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "猜太小,你猜了6次\n",
+      "請輸入 48 <?< 50 範圍的數字:"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 49\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bingo, your are right!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "#程式變數初始化\n",
+    "Max = 100\n",
+    "Min = 0\n",
+    "#ans = 45\n",
+    "ans = random.randint(1,99)\n",
+    "count = 0\n",
+    "while True:\n",
+    "    print('請輸入',Min,'<?<',Max,'範圍的數字:',end='')\n",
+    "    guess = int(input())\n",
+    "\n",
+    "    #如果guess有在Max, min範圍內的話\n",
+    "    #if guess>Min and guess<Max:\n",
+    "        #原來猜數字的程式\n",
+    "    #else\n",
+    "    #否則的話\n",
+    "        #print('out of range')\n",
+    "        #列印('out of range')\n",
+    "\n",
+    "     #如果guess有在Max, min範圍內的話\n",
+    "        #原來猜數字的程式\n",
+    "    #否則的話\n",
+    "        #列印('out of range')   \n",
+    "    count += 1\n",
+    "    if guess == ans:\n",
+    "        print('Bingo, your are right!')\n",
+    "        break\n",
+    "    \n",
+    "    elif guess > ans:\n",
+    "        Max = guess\n",
+    "        print('猜太大,你猜了%d次'%(count))\n",
+    "    else:\n",
+    "        Min = guess\n",
+    "        print('猜太小,你猜了%d次'%(count))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -743,7 +942,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -757,9 +956,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
