--- a/Unit01_Crash Course on Python.ipynb
+++ b/Unit01_Crash Course on Python.ipynb
@@ -320,17 +320,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 天啊\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "討厭\n",
       "你用了 2 個文字述說內心的想法\n",
-      "天\n",
-      "9\n"
+      "------------------------------------------\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "請輸入一文字:  天\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "------------------------------------------\n",
+      "文章總字數: 840\n",
+      " 0\n"
      ]
     }
    ],
@@ -462,13 +484,20 @@
     "\n",
     "print (\"------------------------------------------\")\n",
     "#請使用者輸入一文字\n",
+    "string = input(\"請輸入一文字: \")\n",
     "#計算該文字在文章出現次數\n",
+    "s_num = s.count(string)\n",
     "#列印出現次數\n",
+    "print(s_num)\n",
+    "#print(f\"文字 '{string}' 在文章中出現了 {s_num} 次\")\n",
     "\n",
     "print (\"------------------------------------------\")\n",
     "#把文字中 '。，\\n；：？「」'的標點符號去除\n",
-    "\n",
+    "for i in '。，\\n；：？「」':\n",
+    "    s = s.replace(i,'')\n",
     "#目前已知出現最多次的字的次數\n",
+    "maxstr = ''\n",
+    "maxct = 0\n",
     "#目前已知出現最多次的字\n",
     " \n",
     "print('文章總字數:',len(s))\n",
@@ -480,7 +509,7 @@
     "        #就讓 現在這個字出現的次數 成為 目前已知出現最多次的字的次數\n",
     "        #還要記錄 現在這個字(astr) 到 目前已知出現最多次的字\n",
     "else:\n",
-    "    print(maxchar)"
+    "    print(maxstr,maxct)"
    ]
   },
   {
@@ -505,16 +534,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What is your email address?:  cihtsai0720@gmail.com\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What is your email address?: aaa@ntut.org.tw\n",
-      "Your username is 'aaa' and your domain name is 'ntut.org.tw'\n",
-      "這是在 ntut 之下自定義域\n"
+      "Your username is 'cihtsai0720' and your domain name is 'gmail.com'\n",
+      "這是註冊在 Google 之下的 Email 地址'\n"
      ]
     }
    ],
@@ -523,10 +558,12 @@
     "email = input(\"What is your email address?: \").strip()\n",
     "\n",
     "# Slice out the user name\n",
-    "\n",
+    "user_name = email[0:email.index('@')]\n",
+    "#user_name = email.split('@')[0]\n",
     "\n",
     "# Slice the domain name\n",
-    "\n",
+    "domain_name = email[email.index('@')+1:len(email)]\n",
+    "#domain_name = email.split('@')[1]\n",
     "\n",
     "# Format message\n",
     "output = \"Your username is '{}' and your domain name is '{}'\".format(user_name,domain_name)\n",
@@ -536,11 +573,11 @@
     "\n",
     "\n",
     "domain = {'gmail.com':'Google','yahoo.com.tw':'Yahoo','ntu.edu.tw':'臺大','hotmail.com.tw':'Hotmail','hotmail.com':'Hotmail'}\n",
-    "if ??????:\n",
-    "    output = \"這是註冊在 {} 之下的 Email 地址'\".format(??????)\n",
+    "if domain_name in domain:\n",
+    "    output = \"這是註冊在 {} 之下的 Email 地址'\".format(domain[domain_name])\n",
     "else:\n",
     "    \n",
-    "    output = \"這是在 {} 之下自定義域\".format(??????)\n",
+    "    output = \"這是在 {} 之下自定義域\".format(domain_name)\n",
     "print(output)"
    ]
   },
@@ -566,16 +603,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'柯南', '步美', '灰原'}\n",
+      "<class 'set'>\n",
+      "['柯南', '步美', '灰原']\n",
       "['光彦', '美環']\n",
       "['丸尾', '野口']\n",
-      "['柯南', '步美', '灰原']\n"
+      "['丸尾', '光彦', '柯南', '步美', '灰原', '美環', '野口']\n"
      ]
     }
    ],
@@ -583,17 +623,32 @@
     "m={'柯南','灰原','步美','美環','光彦'}\n",
     "e={'柯南','灰原','丸尾','野口','步美'}\n",
     "a=m.intersection(e)\n",
-    "b=m.difference(a)\n",
-    "c=e.difference(a)\n",
-    "a1=list(a)\n",
-    "b1=list(b)\n",
-    "c1=list(c)\n",
+    "print(a)\n",
+    "print(type(a))\n",
+    "\n",
+    "# 將交集轉換為列表並排序\n",
+    "a1 = list(a)\n",
+    "a1.sort()\n",
+    "print(a1)\n",
+    "\n",
+    "# 求 m 的差集\n",
+    "b = m.difference(a)\n",
+    "# 將差集轉換為列表並排序\n",
+    "b1 = list(b)\n",
     "b1.sort()\n",
     "print(b1)\n",
+    "\n",
+    "# 求 e 的差集\n",
+    "c = e.difference(a)\n",
+    "# 將差集轉換為列表並排序\n",
+    "c1 = list(c)\n",
     "c1.sort()\n",
     "print(c1)\n",
-    "a1.sort()\n",
-    "print(a1)\n"
+    "\n",
+    "full = m.union(e)\n",
+    "d1 = list(full)\n",
+    "d1.sort()\n",
+    "print(d1)"
    ]
   },
   {
@@ -624,14 +679,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " C:\\Users\\JTzai\\Documents\\IMLP421\\Unit01\\testfile\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D:\\code\\ML_202105\\testfile\n",
       "I'm a directory: file1\n",
       "I'm a directory: file2\n",
       "I'm a File: hw_07945001.txt\n",
@@ -642,7 +703,8 @@
       "I'm a File: hw_07945005.txt\n",
       "I'm a File: hw_07945007.txt\n",
       "I'm a File: hw_07945008.txt\n",
-      "I'm a File: hw_07945009.txt\n"
+      "I'm a File: hw_07945009.txt\n",
+      "['07945001', '079450010', '07945002', '07945003', '07945004', '07945005', '07945007', '07945008', '07945009']\n"
      ]
     }
    ],
@@ -653,6 +715,8 @@
     "yourPath = input()\n",
     "# 列出指定路徑底下所有檔案(包含資料夾)\n",
     "allFileList = os.listdir(yourPath)\n",
+    "#print(allFileList)\n",
+    "ID = []\n",
     "\n",
     "# 逐一查詢檔案清單\n",
     "for file in allFileList:\n",
@@ -663,7 +727,11 @@
     "        print(\"I'm a directory: \" + file)\n",
     "    #   使用isfile判斷是否為檔案\n",
     "    elif os.path.isfile(os.path.join(yourPath,file)):\n",
-    "        print(\"I'm a File: \" + file)\n"
+    "        print(\"I'm a File: \" + file)\n",
+    "#進階: 把file的學號抓出來\n",
+    "        ID.append(file[file.index('_')+1:file.index('.')])\n",
+    "print(ID)\n",
+    "#進階: 把file的學號抓出來,另存成一個csv"
    ]
   },
   {
@@ -689,20 +757,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 2\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "['f1', 'f2']\n",
-      "Enter\n",
-      "['f2', 'folder1']\n",
-      "Enter\n",
-      "['f2']\n",
-      "Enter\n"
+      "['f1', 'f2']\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['f2', 'folder1']\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['f2']\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter \n"
      ]
     }
    ],
@@ -710,12 +814,42 @@
     "import os\n",
     "import shutil\n",
     "\n",
+    "# 如果已經存在 'files' 資料夾，則先移除它\n",
     "if os.path.exists('files'):\n",
     "    shutil.rmtree('files')\n",
+    "\n",
+    "# 建立 'files' 資料夾\n",
     "os.mkdir('files')\n",
     "\n",
+    "# 令使用者輸入一數字 N\n",
     "n = int(input())\n",
-    "\n"
+    "\n",
+    "# 切換到 'files' 資料夾\n",
+    "os.chdir('files')\n",
+    "\n",
+    "# 在 'files' 資料夾中建立 f1, f2… fN 等 N 個資料夾\n",
+    "for i in range(1,n+1):\n",
+    "    os.mkdir('f'+str(i))\n",
+    "\n",
+    "# 列出 'files' 資料夾內容並排序\n",
+    "print(sorted(os.listdir()))\n",
+    "a = input('Enter')\n",
+    "\n",
+    "# 將 'files' 資料夾裡的 f1 資料夾重新命名成 folder1\n",
+    "os.rename('f1','folder1')\n",
+    "print(sorted(os.listdir()))\n",
+    "a = input('Enter')\n",
+    "\n",
+    "# 列出 'files' 資料夾內容並排序\n",
+    "os.rmdir('folder1')\n",
+    "print(sorted(os.listdir()))\n",
+    "a = input('Enter')\n",
+    "\n",
+    "# 切換回上層目錄\n",
+    "os.chdir('../')\n",
+    "\n",
+    "# 最後移除 'files' 資料夾\n",
+    "shutil.rmtree('files')"
    ]
   },
   {
@@ -734,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -742,11 +876,23 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Palindrome checker\n",
+      "Palindrome checker\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
       "\n",
       "Please enter a word, phrase, or a sentence \n",
-      "to check if it is a palindrome: 雨 滋 春 樹 碧 連 天  天 連 碧 樹 春 滋 雨\n",
-      "The text you have entered is a palindrome!\n"
+      "to check if it is a palindrome:  資工訓練班\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The text you have entered is not a palindrome.\n"
      ]
     }
    ],
@@ -754,22 +900,32 @@
     "def convertInputString():\n",
     "    #請使用者輸入一串字串，先轉換字串為統一小寫\n",
     "    rawInput = input(\"\\nPlease enter a word, phrase, or a sentence \\nto check if it is a palindrome: \") \n",
-    "    return ???\n",
+    "    rawString = rawInput.lower()\n",
+    "    rawList = list(rawString)\n",
+    "    return rawList\n",
     "\n",
     "def stripAnalphabetics(dirtyList): \n",
     "    analphabeticList = [\" \", \"-\", \".\", \",\", \":\", \";\", \"!\", \"?\", \"'\", \"\\\"\"] \n",
+    "    for character in analphabeticList:\n",
+    "        if character in dirtyList:\n",
+    "            dirtyList.remove(character)\n",
+    "            return stripAnalphabetics(dirtyList)\n",
     "    #去除相關標點符號\n",
-    "    return ???\n",
+    "    return dirtyList\n",
     "\n",
     "def runPalindromeCheck(straightList):\n",
     "    reversedList = straightList[::-1] \n",
-    "    if ????: \n",
+    "    if reversedList == straightList: \n",
     "        return \"The text you have entered is a palindrome!\" \n",
     "    else: \n",
     "        return \"The text you have entered is not a palindrome.\" \n",
     "\n",
     "def main(): \n",
     "    print(\"\\nPalindrome checker\") \n",
+    "    originalList = convertInputString()\n",
+    "    originalList = stripAnalphabetics(originalList)\n",
+    "    palindromeCheck = runPalindromeCheck(originalList)\n",
+    "    print(palindromeCheck)\n",
     "\n",
     "\n",
     "main() "
