--- a/Unit01_Crash Course on Python.ipynb
+++ b/Unit01_Crash Course on Python.ipynb
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1047,30 +1047,35 @@
        "'\\nline=\\'\\'\\nfout = open(\"Score.csv\",\"r\")\\nfor i in (len(name)):\\n    print()\\n'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fin_E = open(??????,\"r\",encoding='UTF-8')\n",
-    "fin_M = open(??????,\"r\",encoding='UTF-8')\n",
+    "fin_E = open(\"data/english_list.csv\",\"r\",encoding='UTF-8')\n",
+    "fin_M = open(\"data/math_list.csv\",\"r\",encoding='UTF-8')\n",
     "lisE=[]\n",
     "lisM=[]\n",
     "name=[]\n",
+    "\n",
+    "    # 讀取英文成績\n",
     "for line in fin_E.readlines():\n",
+    "    #print(line,end='')\n",
     "    line = line.strip().split(\",\")\n",
-    "    ???\n",
-    "    ???\n",
-    "    \n",
+    "    lisE.append(line[1])\n",
+    "    #print(line)\n",
+    "    name.append(line[0])\n",
+    "\n",
+    "    # 讀取數學成績\n",
     "for line in fin_M.readlines():\n",
     "    line = line.strip().split(\",\")\n",
-    "    ???\n",
+    "    lisM.append(line[1])\n",
     "    \n",
     "score=[]\n",
     "fout = open(\"Score.csv\",\"w\")\n",
     "line=''\n",
-    "for i in range(???,???):\n",
+    "for i in range(1,len(lisE)):\n",
     "    score.append(int(lisE[i])+int(lisM[i]))\n",
     "    list1 = [name[i],str(score[i-1]),\"\\n\"]\n",
     "    print(name[i],str(score[i-1]))\n",
